--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,7 @@
 /**
 * FONTS
 */
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700|Montserrat:300,400,500,600,700,800,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700|Montserrat:300,400,500,600,700,800,900&display=swap'); */
 
 /**
 * RESET
@@ -29,7 +29,7 @@ body {
     height: 100%;
 }
 h1 {
-    font-family: "Montserrat";
+    font-family: "Arial Nova", "Montserrat";
     font-weight: 900;
 }
 h2 {
